--- a/app/src/main/res/layout/activity_device_control.xml
+++ b/app/src/main/res/layout/activity_device_control.xml
@@ -6,4 +6,9 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:layout_margin="10dp">
 
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/graph" />
+
 </LinearLayout>
